--- a/perfil.html
+++ b/perfil.html
@@ -85,34 +85,57 @@
       <button type="button" class="btn btn-primary">Cambiar datos</button>
     </div>
 
-<footer>
+    <footer>
+      <div class="row">
 
-  <nav class="nav-izq">
-    <ul>
-      <li>Conocenos</li>
-      <li>Dónde estamos?</li>
-      <li>
-        <a href="faq.html">Preguntas Frecuentes</a>
-      </li>
-    </ul>
-  </nav>
+    <nav class="nav-izq">
+      <ul>
+        <li>Conocenos</li>
+        <li>Dónde estamos?</li>
+        <li>
+          <a href="faq.html">Preguntas Frecuentes</a>
+        </li>
+      </ul>
+    </nav>
 
-  <nav class="nav-der">
-    <ul>
-      <li>
-  <a href="http://Facebook.com" target="new"><i class="fab fa-facebook-f"></i></a>
-      </li>
-      <li>
-        <a href="http://Twitter.com" target="new"><i class="fab fa-twitter"></i></a>
-      </li>
-      <li>
-        <a href="http://Instagram.com" target="new"><i class="fab fa-instagram"></i></a>
-      </li>
-    </ul>
-  </nav>
+    <nav class="nav-der">
+      <ul>
+        <li>
+    <a href="http://Facebook.com" target="new"><i class="fab fa-facebook-f"></i></a>
+        </li>
+        <li>
+          <a href="http://Twitter.com" target="new"><i class="fab fa-twitter"></i></a>
+        </li>
+        <li>
+          <a href="http://Instagram.com" target="new"><i class="fab fa-instagram"></i></a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="navegacion-abajo">
 
 
-</footer>
+    <nav class="nav-izq-abajo">
+      <ul>
+        <li>Contactanos:</li>
+
+        <li> <a href="faq.html"><i class="fas fa-phone"></i> Llamanos!</a>
+         </li>
+        <li>
+          <a href="faq.html"><i class="far fa-envelope"></i> HappyHome@gmail.com</a>
+        </li>
+      </ul>
+    </nav>
+
+    <nav class="nav-der-abajo">
+      <ul>
+        <li>
+    <a class="mercado" href="http://mercadopago.com.ar"> <img src="img/mercadopago.png" alt="mercadopago"></a>
+        </li>
+
+    </nav>
+    </div>
+    </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
