agregado de productos

--- a/detalle.html
+++ b/detalle.html
@@ -71,45 +71,139 @@
 
 
   <section class="row">
-
-    <article>
-    <div class="card1" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
+   <article>
+       <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
+   <img class="producto" src="img/brujula.jpg" class="card-img-top" alt="...">
+   <div class="card-body">
+     <h5 class="card-title"><a href="#" class="INDEX">Love</a></h5>
+     <p class="card-text"> $550 </p>
+     <br>
+     <p class="card-text"> <b> 12 CUOTAS</b></p>
+   </div>
+   </div>
+   </article>
+   <article>
+       <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
+   <img class="producto" src="img/cuadros1.jpg" class="card-img-top" alt="...">
+   <div class="card-body">
+   <h5 class="card-title"><a href="#" class="INDEX">Color</a></h5>
+   <p class="card-text"> $550 </p>
+   <br>
+   <p class="card-text"> <b> 12 CUOTAS</b></p>
+   </div>
+   </div>
+   </article>
+   <article>
+       <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
+   <img class="producto" src="img/Cuadros2.jpg" class="card-img-top" alt="...">
+   <div class="card-body">
+   <h5 class="card-title"><a href="#" class="INDEX">Mundo en 3</a></h5>
+   <p class="card-text"> $550 </p>
+   <br>
+   <p class="card-text"> <b> 12 CUOTAS</b></p>
+   </div>
+   </div>
+   </article>
+   <article>
+       <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
+   <img class="producto" src="img/cuadros3.jpg" class="card-img-top" alt="...">
+   <div class="card-body">
+   <h5 class="card-title"><a href="#" class="INDEX">Líneas de Color</a></h5>
+   <p class="card-text"> $550 </p>
+   <br>
+   <p class="card-text"> <b> 12 CUOTAS</b></p>
+   </div>
+   </div>
+   </article>
+   <article>
+   <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
   <img class="producto" src="img/plumas.jpg" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title"><a href="#" class="INDEX">Plumas</a></h5>
-    <p class="card-text"> $550 </p>
-    <br>
-    <p class="card-text"> <b> 12 CUOTAS</b></p>
-    </div>
-</div>
-  </article>
-
-  <article>
-      <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
-  <img class="producto" src="img/brujula.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title"><a href="#" class="INDEX">Love</a></h5>
-    <p class="card-text"> $550 </p>
-    <br>
-    <p class="card-text"> <b> 12 CUOTAS</b></p>
-  </div>
+   <h5 class="card-title"><a href="#" class="INDEX">Plumas</a></h5>
+   <p class="card-text"> $550 </p>
+   <br>
+   <p class="card-text"> <b> 12 CUOTAS</b></p>
+   </div>
   </div>
   </article>
-
-  <article>
-      <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
-  <img class="producto" src="img/simetria.jpg" class="card-img-top" alt="...">
-  <div class="card-body">
-  <h5 class="card-title"><a href="#" class="INDEX">Simetría</a></h5>
-  <p class="card-text"> $550 </p>
-  <br>
-  <p class="card-text"> <b> 12 CUOTAS</b></p>
-
+   <article>
+       <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
+   <img class="producto" src="img/cuadros4.jpg" class="card-img-top" alt="...">
+   <div class="card-body">
+   <h5 class="card-title"><a href="#" class="INDEX">Love</a></h5>
+   <p class="card-text"> $550 </p>
+   <br>
+   <p class="card-text"> <b> 12 CUOTAS</b></p>
+   </div>
+   </div>
+   </article>
+   <article>
+       <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
+   <img class="producto" src="img/cuadros5.jpg" class="card-img-top" alt="...">
+   <div class="card-body">
+   <h5 class="card-title"><a href="#" class="INDEX">Salpicar</a></h5>
+   <p class="card-text"> $550 </p>
+   <br>
+   <p class="card-text"> <b> 12 CUOTAS</b></p>
+   </div>
+   </div>
+   </article>
+   <article>
+       <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
+   <img class="producto" src="img/cuadros6.jpg" class="card-img-top" alt="...">
+   <div class="card-body">
+   <h5 class="card-title"><a href="#" class="INDEX">Luz</a></h5>
+   <p class="card-text"> $550 </p>
+   <br>
+   <p class="card-text"> <b> 12 CUOTAS</b></p>
   </div>
-  </div>
-  </article>
-
-  </section>
+   </div>
+   </article>
+   <article>
+       <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
+   <img class="producto" src="img/cuadros7.jpg" class="card-img-top" alt="...">
+   <div class="card-body">
+   <h5 class="card-title"><a href="#" class="INDEX">Jirafa</a></h5>
+   <p class="card-text"> $550 </p>
+   <br>
+   <p class="card-text"> <b> 12 CUOTAS</b></p>
+   </div>
+   </div>
+   </article>
+   <article>
+       <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
+   <img class="producto" src="img/cuadros8.jpg" class="card-img-top" alt="...">
+   <div class="card-body">
+   <h5 class="card-title"><a href="#" class="INDEX">Azules</a></h5>
+   <p class="card-text"> $550 </p>
+   <br>
+   <p class="card-text"> <b> 12 CUOTAS</b></p>
+   </div>
+   </div>
+   </article>
+   <article>
+       <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
+   <img class="producto" src="img/simetria.jpg" class="card-img-top" alt="...">
+   <div class="card-body">
+   <h5 class="card-title"><a href="#" class="INDEX">Simetría</a></h5>
+   <p class="card-text"> $550 </p>
+   <br>
+   <p class="card-text"> <b> 12 CUOTAS</b></p>
+   </div>
+   </div>
+   </article>
+   <article>
+       <div class="card" class="col -xs-12 col-md-6 col-lg-4s" style="width: 18rem;">
+   <img class="producto" src="img/cuadros9.jpg" class="card-img-top" alt="...">
+   <div class="card-body">
+   <h5 class="card-title"><a href="#" class="INDEX">Paisaje</a></h5>
+   <p class="card-text"> $550 </p>
+   <br>
+   <p class="card-text"> <b> 12 CUOTAS</b></p>
+   </div>
+   </div>
+   </article>
+   </section>
 </main>
 
 <footer>
