cambios en index

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <link rel="icon" href="img/favicon-32x32.png" type="image/png">
     <title>Nuestro sitio</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -134,7 +135,7 @@
 <div class="card-body">
 <h5 class="card-title">Almohadones</h5>
 <p class="card-text"> Buscá estar cómodo</p>
-<a href="#" class=>más +</a>
+<a href="almohadones.html" class=>más +</a>
 </div>
 </div>
 </article>
